monitoring/prometheus/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  namespace: monitoring
  labels:
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/part-of: monitoring
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: prometheus
  template:
    metadata:
      labels:
        app.kubernetes.io/name: prometheus
        app.kubernetes.io/part-of: monitoring
        app.kubernetes.io/version: 1.0.13
    spec:
      serviceAccount: prometheus
      serviceAccountName: prometheus
      containers:
        - name: prometheus
          image: prom/prometheus:v2.15.1
          ports:
            - containerPort: 9090
              name: http
              protocol: TCP
          volumeMounts:
            - name: config-dir
              mountPath: /var/prometheus
            - name: config-volume
              mountPath: /etc/prometheus/prometheus.yml
              subPath: prometheus.yml
      volumes:
        - name: config-volume
          configMap:
            name: prometheus-config
        - name: config-dir
          emptyDir: {}
---
