monitoring/prometheus/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus
  namespace: monitoring
  labels:
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/part-of: monitoring
spec:
  rules:
    - host: prometheus.danielr1996.de
      http:
        paths:
          - backend:
              serviceName: prometheus
              servicePort: 9090
---
